# esp32-landscape

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
.github/workflows/: build.yml
components/SensorLib/: CMakeLists.txt
components/SensorLib/src/: SensorQMI8658.hpp
components/adc_bsp/: CMakeLists.txt  adc_bsp.c  adc_bsp.h
components/i2c_bsp/: CMakeLists.txt  i2c_bsp.c  i2c_bsp.h
components/i2c_equipment/: CMakeLists.txt  i2c_equipment.cpp  i2c_equipment.h
components/lcd_bl_pwm_bsp/: CMakeLists.txt  lcd_bl_pwm_bsp.c  lcd_bl_pwm_bsp.h
docs/superpowers/plans/: 2026-05-17-landscape-desk-clock.md  2026-05-24-mvp-eventbus-ui-architecture.md  2026-06-07-gesture-navigation-feedback.md
docs/superpowers/specs/: 2026-05-17-landscape-desk-clock-design.md  2026-05-24-mvp-eventbus-ui-architecture-design.md  2026-06-07-gesture-navigation-feedback-design.md
main/: CMakeLists.txt  clock_face_screen.cpp  clock_face_screen.h  clock_net.cpp  clock_net.h  clock_secrets_example.h  clock_ui.cpp  clock_ui.h  idf_component.yml  main.cpp  music_mqtt.cpp  music_mqtt.h  music_player_screen.cpp  music_player_screen.h  music_state.h  music_time_format.h  music_visualizer.cpp  music_visualizer.h  power_mgr.cpp  power_mgr.h  screen.h  screen_nav.cpp  screen_nav.h  user_config.h
main/app/core/event/: app_events.h  event_bus.cpp  event_bus.h  event_queue.h
main/app/features/clock/: clock_battery_gauge_model.h  clock_model.cpp  clock_model.h  clock_presenter.cpp  clock_presenter.h  clock_view.cpp  clock_view.h
main/app/features/clock/widgets/: seven_segment_widget.cpp  seven_segment_widget.h
main/app/features/music/: music_model.cpp  music_model.h  music_presenter.cpp  music_presenter.h  music_state.h  music_view.cpp  music_view.h
main/app/features/music/util/: music_background.cpp  music_background.h  music_player_icon_geometry.h  music_trace.h  music_visualizer.cpp  music_visualizer.h
main/app/features/music/widgets/: background_blur_service.cpp  background_blur_service.h  background_image.cpp  background_image.h  background_widget.cpp  background_widget.h  cover_widget.cpp  cover_widget.h  visualizer_widget.cpp  visualizer_widget.h
main/app/screens/: clock_screen.cpp  clock_screen.h  gesture_feedback_model.h  gesture_manager.cpp  gesture_manager.h  music_screen.cpp  music_screen.h  screen.h  screen_manager.cpp  screen_manager.h
main/app/services/: clock_background_service.cpp  clock_background_service.h  cover_service.cpp  cover_service.h  mqtt_service.cpp  mqtt_service.h  network_service.cpp  network_service.h  power_service.cpp  power_service.h  shairport_parser.h  time_service.cpp  time_service.h
main/app/ui/fonts/: clock_fonts.cpp  clock_fonts.h  clock_glyph_mask.h  material_status_icons_20.c  music_fonts.cpp  music_fonts.h
main/platform/: backlight_policy.h  button_mgr.cpp  button_mgr.h  button_state.h  clock_net.cpp  clock_net.h  lvgl_port.cpp  lvgl_port.h  lvgl_rotation.cpp  lvgl_rotation.h  lvgl_task_config.h  music_mqtt.cpp  music_mqtt.h  power_mgr.cpp  power_mgr.h  sd_card_service.cpp  sd_card_service.h  touch_drv.cpp  touch_drv.h  touch_frame_filter.cpp  touch_frame_filter.h
sim/: CMakeLists.txt  main.cpp  sim_music_mqtt.cpp  sim_music_mqtt.h
sim/include/platform/: lvgl_port.h  power_mgr.h
tests/: CMakeLists.txt  lvgl_tick_stub.h  test_background_blur_service.cpp  test_backlight_policy.cpp  test_button_mgr.cpp  test_button_state.cpp  test_clock_background_service.cpp  test_clock_glyph_mask.cpp  test_clock_model.cpp  test_clock_presenter.cpp  test_clock_view_palette.cpp  test_cover_scale.cpp  test_event_bus.cpp  test_event_queue.cpp  test_lvgl_rotation.cpp  test_lvgl_task_config.cpp  test_mqtt_service_cover_pump.cpp  test_mqtt_service_music_parse.cpp  test_music_background.cpp  test_music_background_image.cpp  test_music_model.cpp  test_music_mqtt_ingest_service_event.cpp  test_music_player_icon_geometry.cpp  test_music_presenter_eventbus.cpp  test_music_time_format.cpp  test_music_visualizer.cpp  test_power_mgr_idle_mode.cpp  test_power_mgr_manual.cpp  test_power_mgr_voltage.cpp  test_power_service.cpp  test_screen_nav.cpp  test_time_service.cpp  test_touch_drv.cpp  test_touch_frame_filter.cpp
tests/stubs/: adc_bsp.h  clock_secrets.h  esp_err.h  esp_heap_caps.h  esp_http_client.h  esp_log.h  esp_sleep.h  i2c_bsp.h  i2c_equipment.h  lcd_bl_pwm_bsp.h  lvgl.h
tests/stubs/app/services/: network_service.h  power_service.h  time_service.h
tests/stubs/driver/: gpio.h  usb_serial_jtag.h
tests/stubs/extra/libs/sjpg/: tjpgd.h
tests/stubs/freertos/: FreeRTOS.h  semphr.h  task.h
tests/stubs/platform/: lvgl_port.h  power_mgr.h
