idf_component_register(
  SRCS "main.cpp"
       "platform/lvgl_port.cpp"
       "platform/lvgl_rotation.cpp"
       "platform/touch_drv.cpp"
       "platform/touch_frame_filter.cpp"
       "platform/power_mgr.cpp"
       "platform/button_mgr.cpp"
       "platform/sd_card_service.cpp"
       "platform/clock_net.cpp"
       "platform/music_mqtt.cpp"
       "app/features/music/util/music_background.cpp"
       "app/features/music/util/music_visualizer.cpp"
       "app/ui/fonts/material_status_icons_20.c"
       "app/core/event/event_bus.cpp"
       "app/features/clock/clock_model.cpp"
       "app/features/clock/clock_presenter.cpp"
       "app/features/clock/clock_view.cpp"
       "app/features/music/music_model.cpp"
       "app/features/music/music_presenter.cpp"
       "app/features/music/music_view.cpp"
       "app/features/music/widgets/background_image.cpp"
       "app/features/music/widgets/background_blur_service.cpp"
       "app/features/music/widgets/background_widget.cpp"
       "app/features/music/widgets/cover_widget.cpp"
       "app/features/music/widgets/visualizer_widget.cpp"
       "app/ui/fonts/music_fonts.cpp"
       "app/ui/fonts/clock_fonts.cpp"
       "app/screens/gesture_manager.cpp"
       "app/screens/clock_screen.cpp"
       "app/screens/music_screen.cpp"
       "app/screens/screen_manager.cpp"
       "app/services/time_service.cpp"
       "app/services/power_service.cpp"
       "app/services/network_service.cpp"
       "app/services/mqtt_service.cpp"
       "app/services/cover_service.cpp"
       "app/services/clock_background_service.cpp"
  REQUIRES i2c_bsp i2c_equipment adc_bsp lcd_bl_pwm_bsp
           esp_wifi esp_event esp_netif nvs_flash lwip
           esp_http_client
           esp_driver_usb_serial_jtag esp_timer esp_lcd driver
           fatfs sdmmc esp_driver_sdmmc SensorLib esp_lcd_axs15231b
  INCLUDE_DIRS "."
  EMBED_FILES "assets/NotoSansSCSubset.ttf")
